welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	 
	
	faireV()
	dessineV()
}
var nbPas = 0	
def faireV(){
	avance();
	nbPas = nbPas + 1;
	avance();
	nbPas = nbPas + 1;
	gauche();
	avance();
	nbPas = nbPas + 1;
	retourne();avance();
	nbPas = nbPas + 1;
	gauche();
	avance();
	nbPas = nbPas + 1;
	avance();
	nbPas = nbPas + 1;
	gauche()
	if ( nbPas == 1 || nbPas == 3 || nbPas == 5) {
		baisseBrosse()
		leveBrosse()
	}
}


